welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:18: error: type mismatch;
 found   : Unit
 required: Int
if (b == c && b != a)
^